# strata

./: .codespellrc  .justfile  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  cron-eest.yml  docs.yml  functional.yml  lint-actions.yml  lint.yml  main-eest.yml  manual-eest.yml  mutants.yml  prover.yml  security.yml  staging-eest.yml  test-coverage.yml  unit.yml
crates/asm/common/: Cargo.toml
crates/asm/logs/: Cargo.toml
crates/asm/moho-program/: Cargo.toml
crates/asm/stf/: Cargo.toml
crates/asm/stf/src/: lib.rs  manager.rs  preprocess.rs  spec.rs  stage.rs  stf.rs  tx_filter.rs  types.rs
crates/asm/subprotocols/core/: Cargo.toml
crates/asm/subprotocols/core/src/: constants.rs  error.rs  lib.rs  types.rs
crates/asm/subprotocols/core/src/handlers/: checkpoint.rs  mod.rs
crates/asm/subprotocols/core/src/messages/: l1_to_l2.rs  l2_to_l1.rs  mod.rs
crates/asm/subprotocols/core/src/parsing/: checkpoint.rs  mod.rs
crates/asm/subprotocols/core/src/verification/: mod.rs  proof.rs  signature.rs  state_transition.rs
crates/btcio/: Cargo.toml
crates/btcio/src/: test_utils.rs
crates/btcio/src/broadcaster/: handle.rs  state.rs  task.rs
crates/btcio/src/reader/: event.rs  query.rs  state.rs  tx_indexer.rs
crates/btcio/src/writer/: builder.rs  context.rs  signer.rs  task.rs  test_utils.rs
crates/chain-worker/: Cargo.toml
crates/chain-worker/src/: builder.rs  errors.rs  handle.rs  lib.rs  message.rs  state.rs  traits.rs  worker.rs
crates/chainexec/: Cargo.toml
crates/chainexec/src/: diff.rs  errors.rs  exec_context.rs  executor.rs  lib.rs  output.rs  state_access.rs  tip_state.rs  validation_util.rs
crates/chaintsn/: Cargo.toml
crates/chaintsn/src/: checkin.rs  context.rs  errors.rs  legacy.rs  state.rs  transition.rs
crates/common/: Cargo.toml
crates/common/src/: logging.rs
crates/consensus-logic/: Cargo.toml
crates/consensus-logic/src/: chain_worker_context.rs  checkpoint_verification.rs  exec_worker_context.rs  fork_choice_manager.rs  genesis.rs  lib.rs  sync_manager.rs  unfinalized_tracker.rs
crates/consensus-logic/src/csm/: client_transition.rs  config.rs  ctl.rs  worker.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: groth16_verifier.rs  lib.rs
crates/db/: Cargo.toml
crates/db-store-rocksdb/: Cargo.toml
crates/db-store-rocksdb/src/: lib.rs  test_utils.rs
crates/db-tests/: Cargo.toml
crates/db-tests/src/: chain_state_tests.rs  checkpoint_tests.rs  client_state_tests.rs  l1_broadcast_tests.rs  l1_tests.rs  l1_writer_tests.rs  l2_tests.rs  lib.rs  proof_tests.rs  sync_event_tests.rs
crates/db/src/: chainstate.rs  database.rs  errors.rs  lib.rs  traits.rs  types.rs
crates/db/src/entities/: bridge_tx_state.rs
crates/db/src/stubs/: chain_state.rs  l2.rs
crates/eectl/: Cargo.toml
crates/eectl/src/: engine.rs  (+4 more)
crates/evmexec/: Cargo.toml
crates/evmexec/src/: block.rs  el_payload.rs  engine.rs  fork_choice_state.rs  http_client.rs
crates/key-derivation/: Cargo.toml
crates/l1tx/: Cargo.toml
crates/mpt/: Cargo.toml
crates/primitives/: Cargo.toml
crates/primitives/src/: crypto.rs  keys.rs  macros.rs  operator.rs  params.rs  proof.rs  utils.rs
crates/primitives/src/l1/: block.rs  btc.rs  header.rs  header_verification.rs  inclusion_proof.rs  payload.rs  tx.rs  utils.rs
crates/primitives/src/relay/: types.rs  util.rs
crates/proof-impl/btc-blockspace/: Cargo.toml
crates/proof-impl/btc-blockspace/src/: block.rs  logic.rs  program.rs  tx.rs  tx_indexer.rs
crates/proof-impl/cl-stf/: Cargo.toml
crates/proof-impl/cl-stf/src/: lib.rs  program.rs
crates/reth/statediff/: Cargo.toml
crates/reth/statediff/src/: lib.rs
crates/rocksdb-store/: Cargo.toml
crates/rocksdb-store/src/: lib.rs  macros.rs  sequence.rs  test_utils.rs
crates/rocksdb-store/src/bridge_relay/: db.rs
crates/rocksdb-store/src/broadcaster/: db.rs
crates/rocksdb-store/src/chain_state/: db.rs
crates/rocksdb-store/src/checkpoint/: db.rs
crates/rocksdb-store/src/client_state/: db.rs
crates/rocksdb-store/src/l1/: db.rs
crates/rocksdb-store/src/l2/: db.rs
crates/rocksdb-store/src/sync_event/: db.rs
crates/rocksdb-store/src/writer/: db.rs
crates/rpc/api/: Cargo.toml
crates/rpc/api/src/: lib.rs
crates/rpc/types/: Cargo.toml
crates/rpc/types/src/: errors.rs  types.rs
crates/sequencer/: Cargo.toml
crates/state/: Cargo.toml
crates/state/src/: block.rs  block_validation.rs  bridge_state.rs  chain_state.rs  client_state.rs  header.rs  operation.rs  state_op.rs
crates/state/src/l1/: view.rs
crates/status/: Cargo.toml
crates/storage/: Cargo.toml
crates/sync/: Cargo.toml
crates/tasks/: Cargo.toml
crates/test-utils/: Cargo.toml
crates/test-utils/btc/: Cargo.toml
crates/test-utils/btc/src/: lib.rs  segment.rs
crates/test-utils/evm-ee/: Cargo.toml
crates/test-utils/evm-ee/src/: lib.rs
crates/test-utils/l2/: Cargo.toml
crates/test-utils/l2/src/: lib.rs
crates/test-utils/tx-indexer/: Cargo.toml
crates/test-utils/tx-indexer/src/: lib.rs
crates/util/shrex/: Cargo.toml
crates/util/shrex/src/: lib.rs
crates/vtxjmt/: Cargo.toml
docker/: README.md  docker-compose-testing.yml  init-keys.sh  test_ee_proof.sh
docker/prover-client/: entrypoint.sh
functional-tests/: README.md  entry.py  pyproject.toml  run_test.sh
functional-tests/envs/: rollup_params_cfg.py  testenv.py
functional-tests/factory/: factory.py
functional-tests/mixins/: __init__.py  bridge_mixin.py  bridge_out_precompile_contract_mixin.py  seq_crash_mixin.py
functional-tests/tests/: cl_ignore_checkpoint_with_invalid_proof.py  client_restart.py  el_batch_gas_limit.py  el_blob_transaction.py  el_block_state_diff.py  el_block_witness_data.py  el_bridge_precompile.py  el_stateroot_from_state_diffs.py  el_sync_from_chainstate.py  fullnode_ignore_checkpoint_with_invalid_proof.py  rpc_bridge_msg.py  rpc_el_inactive.py
functional-tests/utils/: constants.py  precompile.py  transaction.py  utils.py
provers/risc0/: Cargo.toml
provers/sp1/: build.rs
tests/: Cargo.toml
(+194 files in other folders)
