[package]
name = "strata-chain-worker"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-chainexec.workspace = true
strata-chaintsn.workspace = true
strata-eectl.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
strata-status.workspace = true
strata-storage.workspace = true
strata-tasks.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
