[package]
edition = "2021"
name = "strata-chaintsn"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-crypto.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true

bitcoin.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
strata-test-utils.workspace = true


[features]
default = ["fullstd"]
fullstd = ["dep:tracing"]
