[package]
edition = "2021"
name = "strata-consensus-logic"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-chaintsn.workspace = true
strata-common = { workspace = true, default-features = true }
strata-crypto = { workspace = true, default-features = true }
strata-db.workspace = true
strata-eectl.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
strata-status.workspace = true
strata-storage.workspace = true
strata-tasks.workspace = true
zkaleido.workspace = true

anyhow.workspace = true
async-trait.workspace = true
bitcoin.workspace = true
borsh.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-db = { workspace = true, features = ["stubs"] }
strata-rocksdb = { workspace = true, features = ["test_utils"] }
strata-test-utils.workspace = true

rand = { version = "0.8.5", features = ["getrandom", "std_rng"] }
threadpool.workspace = true

[features]
debug-utils = ["strata-common/debug-utils"]
