[package]
edition = "2021"
name = "strata-db"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-primitives.workspace = true
strata-state.workspace = true
zkaleido.workspace = true

anyhow.workspace = true
arbitrary.workspace = true
bitcoin.workspace = true
borsh.workspace = true
mockall = { workspace = true, optional = true }
musig2.workspace = true
parking_lot = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[features]
default = []
mocks = ["mockall"]
stubs = ["dep:parking_lot", "dep:tracing"]

[dev-dependencies]
serde_json.workspace = true
strata-test-utils.workspace = true
