[package]
edition = "2021"
name = "strata-evmexec"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
alpen-reth-evm.workspace = true
alpen-reth-node.workspace = true
strata-db.workspace = true
strata-eectl.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
strata-storage.workspace = true

alloy-eips.workspace = true
alloy-rpc-types.workspace = true
anyhow.workspace = true
arbitrary.workspace = true
borsh.workspace = true
jsonrpsee = { workspace = true, features = ["jsonrpsee-http-client"] }
reth-primitives = { workspace = true, features = [
  "alloy-compat",
  "serde-bincode-compat",
  "std",
] }
reth-rpc-api.workspace = true
reth-rpc-layer.workspace = true
revm-primitives.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
rand.workspace = true
strata-test-utils.workspace = true
