[package]
edition = "2021"
name = "strata-primitives"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
arbitrary.workspace = true
bincode.workspace = true
bitcoin = { workspace = true, features = ["serde", "rand-std"] }
bitcoin-bosd = { workspace = true, features = [
  "address",
  "serde",
  "borsh",
  "arbitrary",
] }
borsh.workspace = true
const-hex = "1.14"
digest.workspace = true
hex.workspace = true
musig2 = { workspace = true, features = ["serde"] }
num_enum.workspace = true
rand = { workspace = true, optional = true }
secp256k1 = { workspace = true, optional = true }
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true
zkaleido.workspace = true

[target.'cfg(target_os = "zkvm")'.dependencies]
k256 = { version = "0.13.4", features = ["schnorr"] }

[dev-dependencies]
strata-test-utils.workspace = true

serde_json.workspace = true

[features]
default = ["std", "rand"]
rand = ["std", "dep:rand"]
std = ["dep:secp256k1"]
