[package]
edition = "2021"
name = "strata-rocksdb"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-db.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
zkaleido.workspace = true

anyhow.workspace = true
bincode.workspace = true
borsh.workspace = true
rockbound.workspace = true
tempfile = { workspace = true, optional = true }
tracing.workspace = true

[dev-dependencies]
strata-test-utils.workspace = true

bitcoin.workspace = true

[features]
default = ["test_utils"]
test_utils = ["tempfile"]
