[package]
edition = "2021"
name = "strata-state"
version = "0.3.0-alpha.1"

[lints]
workspace = true

# Note: Since we want to keep the core consensus logic generic, we shouldn't
# reuse much of reth in this crate so that we can factor it all out eventually.

[dependencies]
strata-crypto.workspace = true
strata-primitives.workspace = true

anyhow.workspace = true
arbitrary.workspace = true
async-trait.workspace = true
bitcoin.workspace = true
borsh.workspace = true
serde.workspace = true
tracing.workspace = true     # ideally this shouldn't be in this crate


[dev-dependencies]
strata-test-utils.workspace = true

[features]
test_utils = []
