[package]
name = "strata-asm-stf"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bitcoin.workspace = true
borsh.workspace = true
strata-asm-common.workspace = true
strata-asm-proto-bridge-v1.workspace = true
strata-asm-proto-core.workspace = true
strata-l1-txfmt.workspace = true
