[package]
edition = "2021"
name = "strata-proofimpl-btc-blockspace"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-l1tx.workspace = true
strata-primitives.workspace = true
zkaleido.workspace = true
zkaleido-native-adapter.workspace = true

bitcoin = { workspace = true, features = ["serde"] }
borsh.workspace = true

[dev-dependencies]
rand.workspace = true
strata-l1tx.workspace = true
strata-test-utils-btc.workspace = true
strata-test-utils-l2.workspace = true
strata-test-utils-tx-indexer.workspace = true
