[package]
edition = "2021"
name = "alpen-reth-statediff"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alpen-chainspec.workspace = true
eyre.workspace = true
revm = { workspace = true, features = ["serde"] }
revm-primitives.workspace = true
serde.workspace = true
strata-mpt.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
