[package]
edition = "2021"
name = "strata-rpc-api"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-common.workspace = true
strata-db.workspace = true
strata-primitives.workspace = true
strata-rpc-types.workspace = true
strata-sequencer.workspace = true
strata-state.workspace = true
zkaleido.workspace = true

bitcoin.workspace = true
jsonrpsee = { workspace = true, features = ["server", "macros"] }

[features]
client = ["jsonrpsee/client"]
default = []
