[package]
edition = "2021"
name = "strata-rpc-types"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-db.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true

bitcoin.workspace = true
hex.workspace = true
jsonrpsee = { workspace = true, features = ["server"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
