[package]
edition = "2021"
name = "strata-test-utils-evm-ee"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-chainexec.workspace = true
strata-chaintsn.workspace = true
strata-primitives.workspace = true
strata-proofimpl-evm-ee-stf.workspace = true
strata-state.workspace = true
strata-test-utils-btc.workspace = true
strata-test-utils-l2.workspace = true

serde_json.workspace = true
