[package]
edition = "2021"
name = "strata-test-utils-l2"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-consensus-logic.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
strata-test-utils.workspace = true
strata-test-utils-btc.workspace = true

bitcoin = { workspace = true, features = ["rand-std"] }
borsh.workspace = true
rand.workspace = true
serde_json.workspace = true
zkaleido-sp1-groth16-verifier.workspace = true
