[package]
edition = "2021"
name = "strata-test-utils-tx-indexer"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-l1tx = { workspace = true, features = ["test_utils"] }
strata-primitives.workspace = true
strata-test-utils-btc.workspace = true
strata-test-utils-l2.workspace = true

bitcoin = { workspace = true, features = ["rand-std"] }
