[package]
edition = "2021"
name = "shrex"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
axum = { version = "0.7.5", optional = true, default-features = false }
serde = { workspace = true, optional = true }
terrors.workspace = true

[features]
# Implements serde {de,}serialization of the Hex wrapper
# by using the encode/decoders
serde = ["dep:serde"]
# Implements IntoResponse for Hex<T>
axum = ["dep:axum"]

[dev-dependencies]
rand.workspace = true
