[package]
name = "strata-asm-proto-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-crypto.workspace = true
strata-l1-txfmt.workspace = true
strata-l1tx.workspace = true
strata-msg-fmt.workspace = true
strata-primitives.workspace = true


borsh.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zkaleido.workspace = true

[features]
debug-utils = []
